# Aeon

./: .gitignore  CMakeLists.txt  IDL_Compile.bat  LICENSE.txt  README.md  idl-compile.sh
Aeon/: CMakeLists.txt  readme.md
Aeon/Core/: CMakeLists.txt  LICENSE.txt  readme.md
Aeon/Core/IDL/: Attribute.proto  Collections.proto  Component.proto  Datatypes.proto  Entity.proto  EntityDB.proto  GameDB.proto  UUID.proto  Value.proto  World.proto
Aeon/Core/Include/Aeon/: Aeon.h  AeonForward.h  AeonTypes.h  Attribute.h  AttributeContainer.h  Bucket.h  CmdArgs.h  Component.h  ComponentDescriptor.h  ComponentRegistry.h  Entity.h  EntityCategory.h  EntityDatabase.h  EntityDescriptor.h  EntityFactory.h  Export.h  FiniteStateMachine.h  IMessageHandler.h  Message.h  MessageChannel.h  MessageDispatcher.h  PhasedBucket.h  ProcessManager.h  Singleton.h  SystemMessages.h  TaskScheduler.h  TimeProvider.h  Uncopyable.h  WorldBase.h
Aeon/Core/Include/Aeon/Logging/: ILogProxy.h  ILogging.h  Logging.h  LoggingStream.h  NullLogging.h  NullStream.h
Aeon/Core/Include/Aeon/Memory/: DynamicPool.h  IAllocator.h  MemoryPool.h  SimpleAllocator.h
Aeon/Core/Include/Aeon/Modules/: IModule.h  ModuleManager.h
Aeon/Core/Include/Aeon/Multicore/: ThreadsafeQueue.h  Types.h
Aeon/Core/Include/Aeon/Platform/: Platform.h
Aeon/Core/Include/Aeon/Serialization/: Attribute.pb.h  Collections.pb.h  Component.pb.h  Datatypes.pb.h  Entity.pb.h  EntityDB.pb.h  GameDB.pb.h  UUID.pb.h  Value.pb.h  World.pb.h
Aeon/Core/Include/Aeon/Types/: Blob.h  HashedKey.h  HashedString.h  Matrix4x4.h  Quaternion.h  Range.h  UUID.h  Vector2.h  Vector3.h  Vector4.h
Aeon/Core/Include/Aeon/Util/: MurmurHash3.h  STLHelpers.h
Aeon/Core/Source/: Aeon.cpp  Attribute.cpp  AttributeContainer.cpp  CmdArgs.cpp  Component.cpp  ComponentDescriptor.cpp  ComponentRegistry.cpp  Entity.cpp  EntityCategory.cpp  EntityDatabase.cpp  EntityDescriptor.cpp  EntityFactory.cpp  IMessageHandler.cpp  Message.cpp  MessageChannel.cpp  MessageDispatcher.cpp  ProcessManager.cpp  TaskScheduler.cpp  TimeProvider.cpp  WorldBase.cpp
Aeon/Core/Source/Logging/: Logging.cpp  LoggingStream.cpp
Aeon/Core/Source/Memory/: DynamicPool.cpp  MemoryPool.cpp  SimpleAllocator.cpp
Aeon/Core/Source/Modules/: ModuleManager.cpp
Aeon/Core/Source/Serialization/: Attribute.pb.cc  Collections.pb.cc  Component.pb.cc  Datatypes.pb.cc  Entity.pb.cc  EntityDB.pb.cc  GameDB.pb.cc  UUID.pb.cc  Value.pb.cc  World.pb.cc
Aeon/Core/Source/Types/: HashedKey.cpp  UUID.cpp
Aeon/Core/Source/Util/: MurmurHash3.cpp
Aeon/Core/Test/: AeonTestUtil.cpp  AeonTestUtil.h  TestEntityDatabase.cpp  TestMemoryPools.cpp  TestMessaging.cpp  TestProcess.cpp  TestRunner.cpp  TestUUID.cpp  TestWorld.cpp
Aeon/Plugins/: readme.md
Aeon/Plugins/AeonCompress/: CMakeLists.txt  LICENSE.txt  readme.md
Aeon/Plugins/AeonCompress/Include/Aeon/Compress/: AeonCompress.h  Export.h  ICompressedFile.h  ICompressionAlgorithm.h  IMemoryStrategy.h  ZipFile.h
Aeon/Plugins/AeonCompress/Source/: AeonCompress.cpp  ZipFile.cpp
Aeon/Plugins/AeonCompress/Test/: AeonCompressTestSuite.cpp  TestZipFullCache.cpp  TestZipNoCache.cpp  TestZipOnDemandCache.cpp
Aeon/Plugins/AeonCompress/Test/Include/: CommonTestUtilities.h
Aeon/Plugins/AeonSubsystem/: CMakeLists.txt  LICENSE.txt  readme.md
Aeon/Plugins/AeonSubsystem/Include/Aeon/: Application.h  ApplicationModule.h  SubsystemModule.h
Aeon/Plugins/AeonSubsystem/Include/Aeon/Platform/: UnixPlatformTools.h  Win32PlatformTools.h
Aeon/Plugins/AeonSubsystem/Include/Aeon/Subsystem/: Export.h  IAudio.h  IInput.h  IPlatformTools.h  IRenderer.h  ISubsystem.h  IUserInterface.h  SubsystemRegistry.h
Aeon/Plugins/AeonSubsystem/Include/Aeon/Subsystem/Impl/: NullAudio.h  NullInput.h  NullPlatformTools.h  NullRenderer.h  NullUserInterface.h
Aeon/Plugins/AeonSubsystem/Source/: Application.cpp  IRenderer.cpp  ISubsystem.cpp  SubsystemRegistry.cpp
Aeon/Plugins/AeonSubsystem/Source/Impl/: NullAudio.cpp
Aeon/Plugins/AeonSubsystem/Source/Platform/: UnixPlatformTools.cpp  Win32PlatformTools.cpp
Aeon/Plugins/AeonXML/: CMakeLists.txt  LICENSE.txt  readme.md
Aeon/Plugins/AeonXML/Include/Aeon/XML/: AeonXMLConf.h  AeonXMLFwd.h  Export.h  SAXHandler.h  SAXHandlerAdapter.h  SAXHandlerInterface.h  SAXParser.h  XMLAttributes.h  XMLString.h
Aeon/Plugins/AeonXML/Source/: SAXHandler.cpp  SAXParser.cpp
Dependencies/expat/lib/: expat.exp  expat_d.exp
Dependencies/qjson/lib/: qjson.exp  qjson_d.exp
Dependencies/qjson/src/: qjson_export.h
Dependencies/qtpropertybrowser/lib/: QtSolutions_PropertyBrowser-head.exp  QtSolutions_PropertyBrowser-headd.exp
Dependencies/zlib/minizip/: ioapi.c  iowin32.c  minizip.c
Tools/: CMakeLists.txt
Tools/AeonEntityEditor/: CMakeLists.txt  LICENSE.txt
Tools/AeonEntityEditor/Include/: AboutDialog.h  AeonPropertyBrowser.h  CheckedNameInputDialog.h  ComponentLibraryTab.h  DatabaseManager.h  EntityEditorTab.h  MainWindow.h  ParameterItemDelegate.h  ParameterNameValidator.h  ParameterTableItem.h  WorldManagerTab.h
Tools/AeonEntityEditor/Include/Plugin/: IWorldEditorPlugin.h  PluginManager.h
Tools/AeonEntityEditor/Resources/: EntityEditor_QT.qrc  EntityEditor_Win32.rc
Tools/AeonEntityEditor/Source/: AboutDialog.cpp  AeonPropertyBrowser.cpp  CheckedNameInputDialog.cpp  ComponentLibraryTab.cpp  DatabaseManager.cpp  EntityEditorTab.cpp  Main.cpp  MainWindow.cpp  ParameterItemDelegate.cpp  ParameterNameValidator.cpp  ParameterTableItem.cpp  VEngineWorldParser.cpp  WorldManagerTab.cpp
Tools/AeonEntityEditor/UI/: AboutDialog.ui  ComponentLibraryTab.ui  EntityEditorTab.ui  MMXWorldEditor.ui  MainWindow.ui  NameInputDialog.ui  WorldManagerTab.ui  WorldSettingsWidget.ui
Tools/EditorPlugins/MMXWorldEditor/Include/: MMXEditorWorld.h  MMXWorldEditorPlugin.h  MMXWorldEditorWidget.h  MMXWorldSettingsWidget.h  VEngineWorldParser.h
Tools/EditorPlugins/MMXWorldEditor/Source/: MMXEditorWorld.cpp  MMXWorldEditorPlugin.cpp  MMXWorldEditorWidget.cpp  MMXWorldSettingsWidget.cpp
